# rust-todolist

./: Cargo.toml  LICENSE  Rocket.toml  database.sqlite  database.sqlite-shm  readme.md
migrations/2024-03-22-090251_create_todo/: up.sql
migrations/2024-03-24-065053_create_user/: up.sql
src/: db.rs  main.rs  routes.rs  schema.rs
src/models/: mod.rs  todo.rs  user.rs
src/routes/: core.rs  mod.rs  todos.rs  users.rs
