[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
